--- a/Lab2/Lab2.csproj
+++ b/Lab2/Lab2.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Ellipse.cs" />
     <Compile Include="Function.cs" />
+    <Compile Include="Handler.cs" />
     <Compile Include="Hiperbola.cs" />
     <Compile Include="Parabola.cs" />
     <Compile Include="Program.cs" />
