--- a/Lab2/Lab2.csproj
+++ b/Lab2/Lab2.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrayExcept.cs" />
     <Compile Include="DivZro.cs" />
     <Compile Include="Ellipse.cs" />
     <Compile Include="Function.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Series.cs" />
+    <Compile Include="Overfl.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
