--- a/Lab2/Lab2.csproj
+++ b/Lab2/Lab2.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Function.cs" />
     <Compile Include="Handler.cs" />
     <Compile Include="Hiperbola.cs" />
+    <Compile Include="MyException.cs" />
     <Compile Include="Parabola.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
